# roy

./: .gitattributes  .gitignore  .netiignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  SEMMAP.md  architecture.md  concept.md  neti-report-full.txt  neti-report.txt  neti.toml  roy.toml
.claude/: settings.local.json
.ishoo/: project.ishoo  project.ishoo.bak  project.tmp.40808  project.tmp.46992  project.tmp.5580
alacritty/: CHANGELOG.md  Cargo.toml
alacritty/src/: cli.rs  clipboard.rs  daemon.rs  event.rs  logging.rs  main.rs  message_bar.rs  string.rs  window_context.rs
alacritty_terminal/src/: event.rs  event_loop.rs  thread.rs
docs/: ROYLANG-spec.md  UI-prototype.md  architecture.md  cleanup-advisory.md  concept.md  current-capabilities.md  current_capabilities_v0-2-2.md  issue-cleanup.md  musing-on-constraints.md  mutation-survivors.md  prompt-obedience-research.md
docs/ai-agent-resources/: caveman.md  chat-style.md  dabible.md  oathy.md
docs/issues/: issues-active.md  issues-v0.md
migrations/: 001_initial.sql  002_language_state.sql
roy/: Cargo.toml
roy/src/: agent.rs  config.rs  denial.rs  interceptor.rs  lib.rs  policy.rs  session.rs  session_log.rs
src/: main.rs
src/agents/: adapter.rs  adapter_tests.rs  agent_contract_tests.rs  claude_code.rs  claude_code_tests.rs  codex.rs  codex_tests.rs  host.rs  mod.rs  session.rs
src/app/: mod.rs
src/capabilities/: capability_tests.rs  fs.rs  mod.rs  validation.rs
src/commands/: ast.rs  ast_parse.rs  ast_parse_helpers.rs  ast_tests.rs  ast_tests_basic.rs  ast_tests_filters.rs  ast_tokenise.rs  (+10 more)
(+124 files in other folders)
