[package]
name = "roy"
version = "0.1.1"
edition = "2021"
description = "ROY — a controlled shell host for terminal-native agents"

[[bin]]
name = "roy"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
