[package]
name = "roy"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "ROY control-plane — command interception, policy, and workspace core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
toml.workspace = true

[dev-dependencies]
